<resources>
    <string name="app_name">Protocol Sigma</string>
    <string name="terminal_title">SISTEMA UPC/EETAC</string>
    <string name="academic_terminal">TERMINAL ACADEMICA CLASIFICADA</string>
    <string name="protocolo_sigma">PROTOCOLO\nSIGMA</string>
    <string name="restricted_access">Acceso restringido al sistema</string>
    <string name="init_auth">&gt; init sigma.auth</string>
    <string name="validating_creds">&gt; validando credenciales EETAC...</string>
    <string name="currency_detected">&gt; moneda detectada: ECTS</string>
    <string name="login">ACCESO</string>
    <string name="registro">REGISTRO</string>
    <string name="usuario">USUARIO</string>
    <string name="password">PASSWORD</string>
    <string name="username_hint">Nombre de usuario o correo</string>
    <string name="password_hint">Contrasena</string>
    <string name="entrar_sistema">ENTRAR AL SISTEMA</string>
    <string name="account_created">Bienvenido.</string>
    <string name="inventario_desbloqueable">INVENTARIO DESBLOQUEABLE</string>
    <string name="tienda_sigma">Tienda SIGMA</string>
    <string name="tienda">TIENDA</string>
    <string name="ranking">RANKING</string>
    <string name="avatar">Avatar</string>
    <string name="user_ects">carla - 100 ECTS</string>
    <string name="salir">CERRAR SESION</string>
    <string name="misiones">MISIONES</string>
    <string name="grupos">GRUPOS</string>
    <string name="unirse">UNIRSE</string>
    <string name="profesores">PROFESORES</string>
    <string name="terminales">TERMINALES</string>
    <string name="ects">ECTS</string>
    <string name="comprar">COMPRAR</string>
    <string name="objetos_recuperados">OBJETOS RECUPERADOS</string>
    <string name="inventario">Inventario</string>
    <string name="ver_inventario">Ver inventario</string>
    <string name="inventario_desc">Compra objetos para desbloquear nuevas pistas.</string>
    <string name="nombre">NOMBRE</string>
    <string name="contrasena">CONTRASENA</string>
    <string name="correo_electronico">CORREO ELECTRONICO</string>
    <string name="confirmar_contrasena">CONFIRMAR CONTRASENA</string>
    <string name="crear_expediente">CREAR EXPEDIENTE</string>
    <string name="crear_usuario">CREAR USUARIO</string>
    <string name="nuevo_agente_hint">Nombre de usuario</string>
    <string name="correo_hint">agente@eetac.upc.edu</string>
    <string name="error_correo">Introduce un correo electronico valido.</string>
    <string name="nombre_jugador_hint">Nombre del jugador</string>
    <string name="crear_clave_sigma_hint">Contrasena</string>
    <string name="repite_clave_hint">Repite tu contrasena</string>
    <string name="error_password_mismatch">Las contrasenas no coinciden.</string>
    <string name="error_password_requirements">La contrasena debe contener una mayuscula, un numero, un caracter especial y debe ser de 8 o mas caracteres.</string>
    <string name="assistent_title">ASISTENTE IA</string>
    <string name="assistent_subtitle">Pregunta como superar una pantalla o resolver una duda frecuente.</string>
    <string name="assistent_question_hint">Escribe tu pregunta...</string>
    <string name="assistent_ask">PREGUNTAR</string>
    <string name="assistent_empty_answer">La respuesta aparecera aqui.</string>
    <string name="assistent_button">ASISTENTE IA</string>
    <string name="volver">VOLVER</string>
    <string name="equipo_label">Equipo: </string>
    <string name="puntos_label">Puntos: </string>
    <string name="avatar_desc">Avatar del jugador</string>
    <string name="mi_equipo_label">Mi equipo</string>
    <string name="volver_botiga">VOLVER A TIENDA</string>
</resources>
